--- a/testsite/templates/elver/builder.html
+++ b/testsite/templates/elver/builder.html
@@ -10,7 +10,7 @@
             <div class="" style="width: 20%">
                 <div class="dropdown-menu dropdown-menu-demo">
                     <h6 class="dropdown-header">项目JOB操作</h6>
-                    <a href="#" class="dropdown-item"><!-- Download SVG icon from http://tabler-icons.io/i/activity -->
+                    <a href="#" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#modal-report"><!-- Download SVG icon from http://tabler-icons.io/i/activity -->
                         <svg  t="1635061601510" class="icon dropdown-item-icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="93046" width="200" height="200"><path d="M512 936.915619c-234.672764 0-424.915619-190.243879-424.915619-424.915619S277.327236 87.083357 512 87.083357c234.676857 0 424.916643 190.243879 424.916643 424.915619S746.676857 936.915619 512 936.915619zM724.45781 469.50414 554.491767 469.50414 554.491767 299.546284l-84.983533 0 0 169.957857L299.54219 469.50414l0 84.99172 169.966043 0 0 169.966043 84.983533 0L554.491767 554.49586l169.966043 0L724.45781 469.50414z" fill="#3e81f4" p-id="93047"></path></svg>
                         New Item</a>
                     <a href="#" class="dropdown-item"><!-- Download SVG icon from http://tabler-icons.io/i/edit -->
@@ -54,7 +54,99 @@
                     <div class="card-body">
                         <div class="tab-content">
                             <div class="tab-pane active show" id="tabs-home-7">
-                                <div>Cursus turpis vestibulum, dui in pharetra vulputate id sed non turpis ultricies fringilla at sed facilisis lacus pellentesque purus nibh</div>
+                                <div class="card">
+                                    <div class="table-responsive">
+                                        <table class="table table-vcenter table-mobile-md card-table">
+                                            <thead>
+                                            <tr>
+                                                <th>Status</th>
+                                                <th>Job</th>
+                                                <th>Last Success</th>
+                                                <th>Last Faliure</th>
+                                                <th class="w-1"></th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <tr>
+                                                <td data-label="Status" >
+                                                    <span class="badge bg-success me-1"></span> Success
+                                                </td>
+                                                <td data-label="Name" >
+                                                    <div class="d-flex py-1 align-items-center">
+                                                        <div class="flex-fill">
+                                                            <a href="#" class="font-weight-bold ">Elver-debug</a>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td data-label="Title" >
+                                                    <div>2021/10/10 12:00</div>
+                                                </td>
+                                                <td class="text-muted" data-label="Role" >
+                                                    2021/10/10 12:00
+                                                </td>
+                                                <td>
+                                                    <div class="btn-list flex-nowrap">
+                                                        <a href="#" class="btn btn-white">
+                                                            Edit
+                                                        </a>
+                                                        <div class="dropdown">
+                                                            <button class="btn dropdown-toggle align-text-top" data-bs-boundary="viewport" data-bs-toggle="dropdown">
+                                                                Actions
+                                                            </button>
+                                                            <div class="dropdown-menu dropdown-menu-end">
+                                                                <a class="dropdown-item" href="#">
+                                                                    Action
+                                                                </a>
+                                                                <a class="dropdown-item" href="#">
+                                                                    Another action
+                                                                </a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td data-label="Status" >
+                                                    <span class="badge bg-danger me-1"></span> Faliure
+                                                </td>
+                                                <td data-label="Name" >
+                                                    <div class="d-flex py-1 align-items-center">
+                                                        <div class="flex-fill">
+                                                            <a href="#" class="font-weight-bold">Elver-release</a>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td data-label="Title" >
+                                                    <div>2021/10/10 12:00</div>
+                                                </td>
+                                                <td class="text-muted" data-label="Role" >
+                                                    2021/10/10 12:00
+                                                </td>
+                                                <td>
+                                                    <div class="btn-list flex-nowrap">
+                                                        <a href="#" class="btn btn-white">
+                                                            Edit
+                                                        </a>
+                                                        <div class="dropdown">
+                                                            <button class="btn dropdown-toggle align-text-top" data-bs-boundary="viewport" data-bs-toggle="dropdown">
+                                                                Actions
+                                                            </button>
+                                                            <div class="dropdown-menu dropdown-menu-end">
+                                                                <a class="dropdown-item" href="#">
+                                                                    Action
+                                                                </a>
+                                                                <a class="dropdown-item" href="#">
+                                                                    Another action
+                                                                </a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
                             </div>
                             <div class="tab-pane" id="tabs-profile-7">
                                 <div>Fringilla egestas nunc quis tellus diam rhoncus ultricies tristique enim at diam, sem nunc amet, pellentesque id egestas velit sed</div>
@@ -62,6 +154,106 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal modal-blur fade" id="modal-report" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">New Item</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label class="form-label">Name</label>
+                    <input type="text" class="form-control" name="example-text-input" placeholder="Your report name">
+                </div>
+                <label class="form-label">Report type</label>
+                <div class="form-selectgroup-boxes row mb-3">
+                    <div class="col-lg-6">
+                        <label class="form-selectgroup-item">
+                            <input type="radio" name="report-type" value="1" class="form-selectgroup-input" checked>
+                            <span class="form-selectgroup-label d-flex align-items-center p-3">
+                                <span class="me-3">
+                                    <span class="form-selectgroup-check"></span>
+                                </span>
+                                <span class="form-selectgroup-label-content">
+                                    <span class="form-selectgroup-title strong mb-1">Simple</span>
+                                    <span class="d-block text-muted">Provide only basic data needed for the report</span>
+                                </span>
+                            </span>
+                        </label>
+                    </div>
+                    <div class="col-lg-6">
+                        <label class="form-selectgroup-item">
+                            <input type="radio" name="report-type" value="1" class="form-selectgroup-input">
+                            <span class="form-selectgroup-label d-flex align-items-center p-3">
+                                <span class="me-3">
+                                    <span class="form-selectgroup-check"></span>
+                                </span>
+                                <span class="form-selectgroup-label-content">
+                                    <span class="form-selectgroup-title strong mb-1">Advanced</span>
+                                    <span class="d-block text-muted">Insert charts and additional advanced analyses to be inserted in the report</span>
+                                </span>
+                            </span>
+                        </label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-8">
+                        <div class="mb-3">
+                            <label class="form-label">Report url</label>
+                            <div class="input-group input-group-flat">
+                                <span class="input-group-text">
+                                    https://tabler.io/reports/
+                                </span>
+                                <input type="text" class="form-control ps-0"  value="report-01" autocomplete="off">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="mb-3">
+                            <label class="form-label">Visibility</label>
+                            <select class="form-select">
+                                <option value="1" selected>Private</option>
+                                <option value="2">Public</option>
+                                <option value="3">Hidden</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="mb-3">
+                            <label class="form-label">Client name</label>
+                            <input type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="mb-3">
+                            <label class="form-label">Reporting period</label>
+                            <input type="date" class="form-control">
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div>
+                            <label class="form-label">Additional information</label>
+                            <textarea class="form-control" rows="3"></textarea>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a href="#" class="btn btn-link link-secondary" data-bs-dismiss="modal">Cancel</a>
+                <a href="#" class="btn btn-primary ms-auto" data-bs-dismiss="modal">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><line x1="12" y1="5" x2="12" y2="19" /><line x1="5" y1="12" x2="19" y2="12" /></svg>
+                    Create new report
+                </a>
             </div>
         </div>
     </div>
