构建步骤页面

--- a/testsite/templates/elver/builder.html
+++ b/testsite/templates/elver/builder.html
@@ -74,7 +74,7 @@
                                                 <td data-label="Name" >
                                                     <div class="d-flex py-1 align-items-center">
                                                         <div class="flex-fill">
-                                                            <a href="#" class="font-weight-bold ">Elver-debug</a>
+                                                            <a href="/builder_step/" class="font-weight-bold ">Elver-debug</a>
                                                         </div>
                                                     </div>
                                                 </td>
