--- a/templates/base.html
+++ b/templates/base.html
@@ -284,6 +284,8 @@ Create new report
 </div>
 </div>
 <!-- Libs JS -->
+<script src="/static/tabler/dist/libs/litepicker/dist/litepicker.js"></script>
+<script src="/static/tabler/dist/libs/choices.js/public/assets/scripts/choices.js"></script>
 <script src="/static/tabler/dist/libs/apexcharts/dist/apexcharts.min.js"></script>
 <!-- Tabler Core -->
 <script src="/static/tabler/dist/js/tabler.min.js"></script>
