--- a/testsite/templates/elver/builder.html
+++ b/testsite/templates/elver/builder.html
@@ -55,8 +55,7 @@
                         <div class="tab-content">
                             <div class="tab-pane active show" id="tabs-home-7">
                                 <div class="card">
-                                    <div class="table-responsive">
-                                        <table class="table table-vcenter table-mobile-md card-table">
+                                    <table class="table table-vcenter table-mobile-md card-table" style="text-align: center">
                                             <thead>
                                             <tr>
                                                 <th><strong>状态</strong></th>
@@ -69,19 +68,19 @@
                                             <tbody>
                                             <tr>
                                                 <td data-label="Status" >
-                                                    <span class="badge bg-success me-1"></span> 成功
+                                                    <svg t="1635143740873" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="170560" width="200" height="200"><path d="M511.872032 1024a511.872032 511.872032 0 1 1 511.872032-511.872032 511.872032 511.872032 0 0 1-511.872032 511.872032z m-114.147463-310.962259a53.490627 53.490627 0 0 0 75.501125 0l323.247188-323.247189a53.490627 53.490627 0 0 0-75.501125-76.780804L433.043739 597.610597l-127.968008-127.968008a53.490627 53.490627 0 1 0-76.780805 75.501125z" fill="#41CC8B" p-id="170561"></path></svg>
                                                 </td>
                                                 <td data-label="Name" >
                                                     <div class="d-flex py-1 align-items-center">
                                                         <div class="flex-fill">
-                                                            <a href="/builder_step/" class="font-weight-bold ">Elver-debug</a>
+                                                            <a href="/builder_detail/" class="font-weight-bold ">Elver-debug</a>
                                                         </div>
                                                     </div>
                                                 </td>
-                                                <td data-label="Title" >
+                                                <td>
                                                     <div>2021/10/10 12:00</div>
                                                 </td>
-                                                <td class="text-muted" data-label="Role" >
+                                                <td>
                                                     2021/10/10 12:00
                                                 </td>
                                                 <td>
@@ -107,19 +106,97 @@
                                             </tr>
                                             <tr>
                                                 <td data-label="Status" >
-                                                    <span class="badge bg-danger me-1"></span> 失败
+                                                    <svg t="1635149671263" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="176981" width="200" height="200"><path d="M682.666667 345.429333L678.570667 341.333333a41.642667 41.642667 0 0 0-58.026667 0L512 449.194667 403.456 341.333333a41.642667 41.642667 0 0 0-58.026667 0L341.333333 345.429333a41.642667 41.642667 0 0 0 0 58.026667L449.194667 512 341.333333 620.544a41.642667 41.642667 0 0 0 0 58.026667l4.778667 4.778666a41.642667 41.642667 0 0 0 58.026667 0L512 574.805333 620.544 682.666667a41.642667 41.642667 0 0 0 58.026667 0l4.096-4.096a41.642667 41.642667 0 0 0 0-58.026667L574.805333 512 682.666667 403.456a41.642667 41.642667 0 0 0 0-58.026667z" fill="#FD5451" p-id="176982"></path><path d="M512 0A512 512 0 1 0 1024 512 512 512 0 0 0 512 0z m0 942.08a430.08 430.08 0 1 1 430.08-430.08 430.762667 430.762667 0 0 1-430.08 430.08z" fill="#FD5451" p-id="176983"></path></svg>
                                                 </td>
                                                 <td data-label="Name" >
                                                     <div class="d-flex py-1 align-items-center">
                                                         <div class="flex-fill">
-                                                            <a href="#" class="font-weight-bold">Elver-release</a>
+                                                            <a href="/builder_detail/" class="font-weight-bold">Elver-release</a>
                                                         </div>
                                                     </div>
                                                 </td>
-                                                <td data-label="Title" >
+                                                <td>
                                                     <div>2021/10/10 12:00</div>
                                                 </td>
-                                                <td class="text-muted" data-label="Role" >
+                                                <td>
+                                                    2021/10/10 12:00
+                                                </td>
+                                                <td>
+                                                    <div class="btn-list flex-nowrap">
+                                                        <a href="#" class="btn btn-white">
+                                                            编辑
+                                                        </a>
+                                                        <div class="dropdown">
+                                                            <button class="btn dropdown-toggle align-text-top" data-bs-boundary="viewport" data-bs-toggle="dropdown">
+                                                                操作
+                                                            </button>
+                                                            <div class="dropdown-menu dropdown-menu-end">
+                                                                <a class="dropdown-item" href="#">
+                                                                    Action
+                                                                </a>
+                                                                <a class="dropdown-item" href="#">
+                                                                    Another action
+                                                                </a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td data-label="Status" >
+                                                    <div class="progress " style="margin-left: 5px">
+                                                        <div class="progress-bar progress-bar-indeterminate bg-blue"></div>
+                                                    </div>
+                                                </td>
+                                                <td data-label="Name" >
+                                                    <div class="d-flex py-1 align-items-center">
+                                                        <div class="flex-fill">
+                                                            <a href="/builder_detail/" class="font-weight-bold">Elver-release</a>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td>
+                                                    <div>2021/10/10 12:00</div>
+                                                </td>
+                                                <td >
+                                                    2021/10/10 12:00
+                                                </td>
+                                                <td>
+                                                    <div class="btn-list flex-nowrap">
+                                                        <a href="#" class="btn btn-white">
+                                                            编辑
+                                                        </a>
+                                                        <div class="dropdown">
+                                                            <button class="btn dropdown-toggle align-text-top" data-bs-boundary="viewport" data-bs-toggle="dropdown">
+                                                                操作
+                                                            </button>
+                                                            <div class="dropdown-menu dropdown-menu-end">
+                                                                <a class="dropdown-item" href="#">
+                                                                    Action
+                                                                </a>
+                                                                <a class="dropdown-item" href="#">
+                                                                    Another action
+                                                                </a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td data-label="Status" >
+                                                    <svg t="1635214730079" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="240739" width="200" height="200"><path d="M285.013333 873.301333A426.666667 426.666667 0 0 0 806.314667 203.093333L285.013333 873.301333z m-67.328-52.394666L738.986667 150.698667A426.666667 426.666667 0 0 0 217.685333 820.906667zM512 1024A512 512 0 1 1 512 0a512 512 0 0 1 0 1024z" p-id="240740"></path></svg>
+                                                </td>
+                                                <td data-label="Name" >
+                                                    <div class="d-flex py-1 align-items-center">
+                                                        <div class="flex-fill">
+                                                            <a href="/builder_detail/" class="font-weight-bold ">Elver-debug</a>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td>
+                                                    <div>2021/10/10 12:00</div>
+                                                </td>
+                                                <td>
                                                     2021/10/10 12:00
                                                 </td>
                                                 <td>
@@ -145,7 +222,6 @@
                                             </tr>
                                             </tbody>
                                         </table>
-                                    </div>
                                 </div>
                             </div>
                             <div class="tab-pane" id="tabs-profile-7">
