--- a/templates/base.html
+++ b/templates/base.html
@@ -82,11 +82,21 @@
                 <div class="d-flex flex-column flex-md-row flex-fill align-items-stretch align-items-md-center">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#" >
+                            <a class="nav-link" href="/builder/" >
                                 <span class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/home -->
                                     <svg t="1635058877250" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="14584" width="200" height="200"><path d="M1024.553816 512.163946c0 282.710131-229.148915 511.836054-511.830056 511.836054s-511.830056-229.125923-511.830057-511.836054C0.893703 229.516793 230.042619 0.339887 512.72376 0.339887s511.830056 229.176906 511.830056 511.824059z" fill="#5EB530" p-id="14585"></path><path d="M724.303509 572.494914c8.622137 0 17.119316 2.399203 24.565843 6.89771 22.293598 13.620478 29.416233 42.836777 15.819747 65.178358-8.672121 14.24627-23.817092 22.743448-40.561532 22.743449-8.622137 0-17.119316-2.399203-24.565843-6.923701-10.821407-6.572818-18.419884-16.969366-21.418889-29.265283-2.974013-12.320909-0.999668-25.041685 5.57315-35.863093 8.672121-14.24527 23.867075-22.76744 40.587524-22.76744m-0.024992-29.691142c-25.99137 0-51.382939 13.195619-65.903118 37.038702-22.142648 36.337935-10.621473 83.773185 25.765445 105.915833 12.495851 7.597477 26.342254 11.246266 39.986723 11.246266 26.016362 0 51.408931-13.171627 65.92811-37.012711 22.142648-36.363926 10.597481-83.798176-25.765445-105.941824-12.520843-7.596478-26.342254-11.246266-40.011715-11.246266zM347.028776 297.120347c16.981362 0 33.676818 4.69844 48.271972 13.570494 43.835445 26.691138 57.793811 84.085081 31.101673 127.921526-17.044341 27.97871-46.809458 44.686163-79.623562 44.686163-16.981362 0-33.663823-4.69844-48.258977-13.58249-43.835445-26.692137-57.793811-84.073085-31.114669-127.90953 17.043341-27.97871 46.808458-44.686163 79.623563-44.686163m0-29.690142c-41.424246 0-81.86082 20.968038-104.978144 58.943429-35.250296 57.894777-16.881395 133.432696 41.024378 168.695987 19.943378 12.145967 41.961068 17.91905 63.703849 17.919051 41.436242 0 81.872816-20.981034 104.978144-58.943429 35.250296-57.906773 16.894391-133.432696-41.024379-168.695988-19.931382-12.133971-41.961068-17.91905-63.703848-17.91905zM409.245118 691.656348c8.635133 0 17.119316 2.399203 24.554847 6.89771 22.330586 13.596486 29.428229 42.836777 15.844739 65.154367-8.685116 14.24527-23.842084 22.76744-40.561532 22.76744-8.635133 0-17.132312-2.399203-24.579839-6.947693-10.809411-6.572818-18.405889-16.970365-21.404893-29.265283-2.987008-12.295917-0.999668-25.016694 5.57315-35.863092 8.684117-14.24627 23.842084-22.743448 40.573528-22.743449m0-29.690141c-26.028358 0-51.407931 13.171627-65.92811 37.01271-22.130652 36.363926-10.609477 83.798176 25.753449 105.915833 12.520843 7.622469 26.35425 11.271258 40.011715 11.271257 26.016362 0 51.394935-13.195619 65.903118-37.038702 22.142648-36.337935 10.621473-83.773185-25.741453-105.915832-12.519843-7.621469-26.341254-11.245266-39.998719-11.245266zM685.465404 237.914005c8.622137 0 17.119316 2.386208 24.566843 6.910706 22.31759 13.595486 29.440225 42.810785 15.844739 65.141371-8.696113 14.24527-23.842084 22.755444-40.586524 22.755444-8.622137 0-17.119316-2.399203-24.566843-6.922701-10.796415-6.585813-18.418884-16.982361-21.391897-29.278279-2.975012-12.295917-1.02466-25.029689 5.57215-35.851096 8.67312-14.24527 23.843083-22.755444 40.561532-22.755445m0-29.691141c-26.015362 0-51.407931 13.170627-65.903118 37.01371-22.142648 36.362926-10.621473 83.785181 25.741453 105.915832 12.520843 7.622469 26.341254 11.259262 39.986723 11.259262 26.041353 0 51.407931-13.170627 65.92811-37.012711 22.141648-36.362926 10.596482-83.78618-25.741453-105.928828-12.544835-7.622469-26.341254-11.247266-40.011715-11.247265z" fill="#FFFFFF" p-id="14586"></path><path d="M651.952531 593.28701L422.865595 453.832313l15.444872-25.354581 229.085937 139.468692zM383.235754 490.942992l33.394912 178.890602-29.190308 5.449191-33.393912-178.890603zM457.654045 368.734569l-8.572154-28.428561 174.279134-52.483574 8.547162 28.428561z" fill="#FFFFFF" p-id="14587"></path></svg>                </span>
                                 <span class="nav-link-title">
                                     BUILDER
+                                </span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/apk/" >
+                                <span class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/home -->
+                                    <svg t="1635059906963" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="70642" width="200" height="200"><path d="M720.149333 0L981.333333 257.066667v665.813333A101.12 101.12 0 0 1 880.213333 1024H143.786667A101.12 101.12 0 0 1 42.666667 922.88V101.12A101.12 101.12 0 0 1 143.786667 0h576.362666zM299.008 502.336H246.826667L151.68 746.666667h52.309333l20.181334-55.509334h97.664l21.333333 55.509334h53.674667l-97.834667-244.330667z m203.157333 0h-79.146666V746.666667h49.322666v-92.16h32.149334c33.493333 0 33.493333 0 51.178666-3.498667 13.013333-2.837333 13.013333-2.837333 25.6-11.584 12.565333-8.746667 12.565333-8.746667 20.736-24.106667 8.170667-15.317333 8.170667-15.317333 8.170667-37.824 0-29.162667 0-29.162667-14.186667-47.573333-14.165333-18.410667-14.165333-18.410667-35.157333-23.914667-12.757333-3.413333-12.757333-3.413333-52.8-3.648l-5.866667-0.021333z m198.506667 0H651.306667V746.666667h49.344v-73.813334l40-40.853333L807.829333 746.666667h63.829334l-97.002667-149.162667 92.010667-95.168h-66.346667l-99.648 108.501333v-108.501333z m-428.330667 57.002667l33.664 90.666666H239.338667l33.002666-90.666666z m223.829334-15.68c26.666667 0 26.666667 0 35.498666 1.664 11.989333 2.176 11.989333 2.176 19.84 10.837333 7.829333 8.682667 7.829333 8.682667 7.829334 22.016 0 10.816 0 10.816-5.589334 18.986667s-5.589333 8.170667-15.424 12.010666c-9.813333 3.84-9.813333 3.84-38.997333 3.84h-26.986667v-69.333333h23.829334z" fill="#4BB86A" p-id="70643"></path><path d="M776.277333 257.066667c-30.570667 0-55.381333-25.173333-55.381333-56.170667L720.96 0 981.333333 257.066667h-205.056z" fill="#94D9B9" p-id="70644"></path></svg>
+                                </span>
+                                <span class="nav-link-title">
+                                    APK INFO
                                 </span>
                             </a>
                         </li>
@@ -107,16 +117,6 @@
                                 </span>
                                 <span class="nav-link-title">
                                     LOG
-                                </span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" >
-                                <span class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/home -->
-                                    <svg t="1635059906963" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="70642" width="200" height="200"><path d="M720.149333 0L981.333333 257.066667v665.813333A101.12 101.12 0 0 1 880.213333 1024H143.786667A101.12 101.12 0 0 1 42.666667 922.88V101.12A101.12 101.12 0 0 1 143.786667 0h576.362666zM299.008 502.336H246.826667L151.68 746.666667h52.309333l20.181334-55.509334h97.664l21.333333 55.509334h53.674667l-97.834667-244.330667z m203.157333 0h-79.146666V746.666667h49.322666v-92.16h32.149334c33.493333 0 33.493333 0 51.178666-3.498667 13.013333-2.837333 13.013333-2.837333 25.6-11.584 12.565333-8.746667 12.565333-8.746667 20.736-24.106667 8.170667-15.317333 8.170667-15.317333 8.170667-37.824 0-29.162667 0-29.162667-14.186667-47.573333-14.165333-18.410667-14.165333-18.410667-35.157333-23.914667-12.757333-3.413333-12.757333-3.413333-52.8-3.648l-5.866667-0.021333z m198.506667 0H651.306667V746.666667h49.344v-73.813334l40-40.853333L807.829333 746.666667h63.829334l-97.002667-149.162667 92.010667-95.168h-66.346667l-99.648 108.501333v-108.501333z m-428.330667 57.002667l33.664 90.666666H239.338667l33.002666-90.666666z m223.829334-15.68c26.666667 0 26.666667 0 35.498666 1.664 11.989333 2.176 11.989333 2.176 19.84 10.837333 7.829333 8.682667 7.829333 8.682667 7.829334 22.016 0 10.816 0 10.816-5.589334 18.986667s-5.589333 8.170667-15.424 12.010666c-9.813333 3.84-9.813333 3.84-38.997333 3.84h-26.986667v-69.333333h23.829334z" fill="#4BB86A" p-id="70643"></path><path d="M776.277333 257.066667c-30.570667 0-55.381333-25.173333-55.381333-56.170667L720.96 0 981.333333 257.066667h-205.056z" fill="#94D9B9" p-id="70644"></path></svg>
-                                </span>
-                                <span class="nav-link-title">
-                                    APK INFO
                                 </span>
                             </a>
                         </li>
@@ -153,22 +153,16 @@
                 <div class="row text-center align-items-center flex-row-reverse">
                     <div class="col-lg-auto ms-lg-auto">
                         <ul class="list-inline list-inline-dots mb-0">
-                            <li class="list-inline-item"><a href="./docs/index.html" class="link-secondary">Documentation</a></li>
-                            <li class="list-inline-item"><a href="./license.html" class="link-secondary">License</a></li>
-                            <li class="list-inline-item"><a href="https://github.com/tabler/tabler" target="_blank" class="link-secondary" rel="noopener">Source code</a></li>
-                            <li class="list-inline-item">
-                                <a href="https://github.com/sponsors/codecalm" target="_blank" class="link-secondary" rel="noopener">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon text-pink icon-filled icon-inline" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M19.5 13.572l-7.5 7.428l-7.5 -7.428m0 0a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572" /></svg>
-                                    Sponsor
-                                </a>
-                            </li>
+                            <li class="list-inline-item"><a href="#" class="link-secondary">Documentation</a></li>
+                            <li class="list-inline-item"><a href="#" class="link-secondary">License</a></li>
+                            <li class="list-inline-item"><a href="#" target="_blank" class="link-secondary" rel="noopener">Source code</a></li>
                         </ul>
                     </div>
                     <div class="col-12 col-lg-auto mt-3 mt-lg-0">
                         <ul class="list-inline list-inline-dots mb-0">
                             <li class="list-inline-item">
                                 Copyright &copy; 2021
-                                <a href="." class="link-secondary">Rafa</a>.
+                                <a href="." class="link-secondary">Rafa Chen</a>.
                                 All rights reserved.
                             </li>
                         </ul>
@@ -281,11 +275,26 @@
         </div>
     </div>
 </div>
+
+<!-- JQ JS -->
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <!-- Libs JS -->
 <script src="/static/tabler/dist/libs/litepicker/dist/litepicker.js"></script>
 <script src="/static/tabler/dist/libs/choices.js/public/assets/scripts/choices.js"></script>
 <script src="/static/tabler/dist/libs/apexcharts/dist/apexcharts.min.js"></script>
+
 <!-- Tabler Core -->
 <script src="/static/tabler/dist/js/tabler.min.js"></script>
+
+<!-- 模块切换高亮 -->
+<script>
+     $('a').each(function(){
+        if($(this).first().attr('href')=='{{ request.path }}'){
+            $(this).parents('.nav-item').addClass('active');
+        }else{
+            $(this).parents('.nav-item').removeClass('active');
+        }
+     });
+</script>
 </body>
 </html>
